improvement of the enumdata metadata for the displaylabel retrieve